--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img class="img-fluid rounded" src="img/persona.svg" alt="imagen caroline">
                 </div>
 
-                <div class="col-sm-12 col-md-12 col-lg-7 d-flex justify-content-center align-items-center">
+                <div class="col-sm-12 col-md-12 col-lg-7 d-flex justify-content-center align-items-center mt-xs-3 mt-sm-3">
                     <div>
                         <h2 class="fs-2 mb-3 terciario text-center source-sans fw-bold">Caroline Sada</h2>
 
@@ -129,7 +129,7 @@
                         <div class="card-body">
                             <p class="card-text text-center source-sans"> Desarrolles, construyas y mejores tus
                                 habilidades de
-                                comunicación.</p>
+                                comunicación para trato con proveedores.</p>
                         </div>
                     </div>
                 </div>
