--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     <img class="img-fluid rounded" src="img/persona.svg" alt="imagen caroline">
                 </div>
 
-                <div class="col-sm-12 col-md-12 col-lg-7 d-flex justify-content-center align-items-center mt-xs-3 mt-sm-3">
-                    <div>
-                        <h2 class="fs-2 mb-3 terciario text-center source-sans fw-bold">Caroline Sada</h2>
+                <div class="col-sm-12 col-md-12 col-lg-7 d-flex justify-content-center align-items-center">
+                    <div class="mt-2">
+                        <h2 class="fs-2 terciario text-center source-sans fw-bold">Caroline Sada</h2>
 
                         <p class="fs-4 source-sans ">Soy licenciada en Administración y Dirección de Empresas, tengo
                             34
@@ -98,9 +98,9 @@
                     <h2 class="fs-2 mb-3 terciario text-center source-sans fw-bold">El curso está enfocado para que</h2>
                 </div>
                 <div
-                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-xs-2 mb-sm-2 ">
+                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
                     <div class="card" style="width: 20rem;">
-                        <img src="img/conocimiento.svg" class="card-img-top img-fluid" alt="...">
+                        <img src="img/conocimiento.svg" class="card-img-top img-fluid" alt="conocimientos">
                         <div class="card-body">
                             <p class="card-text text-center source-sans">Adquieras los conocimientos base para iniciar
                                 tu
@@ -110,9 +110,9 @@
                 </div>
 
                 <div
-                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-xs-2 mb-sm-2">
+                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
                     <div class="card" style="width: 20rem;">
-                        <img src="img/grafica.svg" class="card-img-top img-fluid" alt="...">
+                        <img src="img/grafica.svg" class="card-img-top img-fluid" alt="toma de decisiones">
                         <div class="card-body">
                             <p class="card-text text-center source-sans">Tomes decisiones estratégicas aplicando los
                                 conocimientos
@@ -123,9 +123,9 @@
                 </div>
 
                 <div
-                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-xs-2 mb-sm-2">
+                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
                     <div class="card" style="width: 20rem;">
-                        <img src="img/habilidades.svg" class="card-img-top img-fluid" alt="...">
+                        <img src="img/habilidades.svg" class="card-img-top img-fluid" alt="habilidades de comunicacion">
                         <div class="card-body">
                             <p class="card-text text-center source-sans"> Desarrolles, construyas y mejores tus
                                 habilidades de
