--- a/index.html
+++ b/index.html
@@ -13,19 +13,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
-
 </head>
 
 <body>
-
     <div class="container">
-        <div class="row py-5 mt-3">
+        <div class="row  py-3 mt-3">
             <div class="col-sm-12 col-md-10 col-lg-10 ml-5">
                 <div class="d-flex justify-content-start align-items-center">
                     <h1 class="fs-1 text-center source-sans obscuro fw-bold">Curso digital para las finanzas de tus
                         emprendimientos</h1>
                 </div>
-
             </div>
 
             <div class="col-sm-12 col-md-2 col-lg-2">
@@ -45,8 +42,6 @@
                             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                             <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
                         </svg></a>
-
-
                     <a href=""><svg xmlns="http://www.w3.org/2000/svg"
                             class="icon icon-tabler icon-tabler-brand-instagram" width="50" height="50"
                             viewBox="0 0 24 24" stroke-width="1" stroke="#4F6C8A" fill="none" stroke-linecap="round"
@@ -58,49 +53,48 @@
                         </svg></a>
                 </div>
             </div>
-
         </div>
     </div>
 
-
-    <div class="container mt-5">
+    <div class="container mt-3">
         <!--  Presentacion -->
         <div class="bg-color px-3 py-4">
             <div class="row mb-5">
-                <div class="col-sm-12 col-md-12 col-lg-5">
-                    <img class="img-fluid rounded" src="img/persona.svg" alt="imagen caroline">
+                <div class="col-sm-12 col-md-12 col-lg-5 mt-2">
+                    <img class="img-fluid rounded" src="img/persona.svg" alt="imagen caroline" width="640" height="360">
                 </div>
 
                 <div class="col-sm-12 col-md-12 col-lg-7 d-flex justify-content-center align-items-center">
                     <div class="mt-2">
-                        <h2 class="fs-2 terciario text-center source-sans fw-bold">Caroline Sada</h2>
+                        <h2 class="fs-2 fs-sm-3 fs-md-5 terciario text-center source-sans fw-bold">Caroline Sada</h2>
 
-                        <p class="fs-4 source-sans ">Soy licenciada en Administración y Dirección de Empresas, tengo
+                        <p class="fs-4 fs-sm-6 source-sans">Soy licenciada en Administración y Dirección de Empresas,
+                            tengo
                             34
                             años
                             y también soy
                             una influencer financiera, rubro en el que me desempeño como analista desde hace tres
                             años.</p>
-                        <p class="fs-4 source-sans">Gracias a mí creatividad, he llevado a generar contenido de valor
+                        <p class="fs-4 fs-md-6 source-sans">Gracias a mí creatividad, he llevado a generar contenido de
+                            valor
                             para
                             redes sociales, donde doy
                             consejos y enseño conceptos de finanzas a emprendedores; la información que comparto
-                            se ha viralizado, por lo que me he convertido en una influencer, en especial en la
+                            se ha viralizado, por lo que me he convertido en una influencer en la
                             plataforma de Tik Tok.</p>
                     </div>
                 </div>
             </div>
-
 
             <!--  Descripcion curso -->
             <div class="row my-5">
                 <div class="col-sm-12 col-md-12 col-lg-12 my-5">
                     <h2 class="fs-2 mb-3 terciario text-center source-sans fw-bold">El curso está enfocado para que</h2>
                 </div>
-                <div
-                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
                     <div class="card" style="width: 20rem;">
-                        <img src="img/conocimiento.svg" class="card-img-top img-fluid" alt="conocimientos">
+                        <img src="img/conocimiento.svg" class="card-img-top img-fluid" width="640" height="360"
+                            alt="conocimientos">
                         <div class="card-body">
                             <p class="card-text text-center source-sans">Adquieras los conocimientos base para iniciar
                                 tu
@@ -109,10 +103,10 @@
                     </div>
                 </div>
 
-                <div
-                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
                     <div class="card" style="width: 20rem;">
-                        <img src="img/grafica.svg" class="card-img-top img-fluid" alt="toma de decisiones">
+                        <img src="img/grafica.svg" class="card-img-top img-fluid" width="640" height="360"
+                            alt="toma de decisiones">
                         <div class="card-body">
                             <p class="card-text text-center source-sans">Tomes decisiones estratégicas aplicando los
                                 conocimientos
@@ -122,10 +116,10 @@
                     </div>
                 </div>
 
-                <div
-                    class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-center mb-sm-4">
                     <div class="card" style="width: 20rem;">
-                        <img src="img/habilidades.svg" class="card-img-top img-fluid" alt="habilidades de comunicacion">
+                        <img src="img/habilidades.svg" class="card-img-top img-fluid" width="640" height="360"
+                            alt="habilidades de comunicacion">
                         <div class="card-body">
                             <p class="card-text text-center source-sans"> Desarrolles, construyas y mejores tus
                                 habilidades de
@@ -134,9 +128,6 @@
                     </div>
                 </div>
             </div>
-
-
-
 
             <div class="row my-5">
                 <div class="col-sm-12 col-md-12 col-lg-12 text-center">
@@ -169,7 +160,6 @@
                 </div>
             </div>
 
-
             <!--  Formulario -->
             <div class="container-sm mb-3">
                 <div class="col-sm-12 col-md-6 col-lg-6 offset-md-3" id="alertaExito"></div>
@@ -194,10 +184,9 @@
                                 disabled>Enviar</button>
                         </div>
                     </div>
+                </form>
             </div>
-            </form>
         </div>
-
     </div>
 
     <!-- Footer -->
@@ -229,7 +218,6 @@
                     </svg></a>
             </div>
         </div>
-
     </div>
 
     <div class="row">
@@ -237,17 +225,7 @@
             <p class="d-flex justify-content-center align-items-center">@2024 Todos los derechos reservados</p>
         </div>
     </div>
-
-    </div>
-    <!-- Inicio -->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <script src="JS/app.js">
-
-    </script>
+    <!-- Script -->
+    <script src="JS/app.js"></script>
 </body>
-
 </html>
