--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row py-3 mt-3">
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <div class="d-flex justify-content-start align-items-center">
+                <div class="text-center">
                     <h1 class="fs-1 text-center source-sans obscuro fw-bold">Curso digital para las finanzas de tus
                         emprendimientos</h1>
                 </div>
