--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="card-body">
                             <p class="card-text text-center source-sans"> Desarrolles, construyas y mejores tus
                                 habilidades de
-                                comunicación para trato con proveedores.</p>
+                                comunicación con proveedores.</p>
                         </div>
                     </div>
                 </div>
